@@ -5,11 +5,13 @@ export(dateParse)
 export(dateAlign)
 S3method(dateAlign, default)
 S3method(dateAlign, character)
+S3method(dateAlign, factor)
 S3method(dateAlign, Date)
 S3method(dateAlign, POSIXct)
 S3method(dateAlign, POSIXlt)
 export(dateMatch)
 S3method(dateMatch, character)
+S3method(dateMatch, factor)
 S3method(dateMatch, default)
 S3method(dateMatch, Date)
 S3method(dateMatch, POSIXct)
@@ -23,12 +25,14 @@ S3method(dateSeq, POSIXlt)
 export(dateShift)
 S3method(dateShift, default)
 S3method(dateShift, character)
+S3method(dateShift, factor)
 S3method(dateShift, Date)
 S3method(dateShift, POSIXct)
 S3method(dateShift, POSIXlt)
 export(dateWarp)
 S3method(dateWarp, default)
 S3method(dateWarp, character)
+S3method(dateWarp, factor)
 S3method(dateWarp, Date)
 S3method(dateWarp, POSIXct)
 S3method(dateWarp, POSIXlt)
@@ -36,6 +40,7 @@ export(dateWarpAppend)
 export(dateDow)
 S3method(dateDow, default)
 S3method(dateDow, character)
+S3method(dateDow, factor)
 export(holidays)
 export(isHoliday)
 export(registerHolidays)
